@@ -1,3 +1,12 @@
+2003-02-27  Andrey Kiselev  <dron@remotesensing.org>
+
+	* tools/fax2tiff.c, man/fax2tiff.1: New switch (-X) to set width of
+	raw input page. Patch supplied by Julien Gaulmin. See
+
+	http://bugzilla.remotesensing.org/show_bug.cgi?id=293
+
+	for details.
+
 2003-02-26  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* libtiff/tif_dir.c: fixed up the tif_postdecode settings
